--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "^14.2.18"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -21,6 +21,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.1"
+    "eslint-config-next": "15.0.1",
+    "hamburger-react": "^2.5.1"
   }
 }
