--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
-    "hamburger-react": "^2.5.1"
+    "hamburger-react": "^2.5.1",
+    "antd": "^5.21.6"
   }
 }
