--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "^14.2.18",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next": "^14.2.18"
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "antd": "^5.21.6",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
     "hamburger-react": "^2.5.1",
-    "antd": "^5.21.6"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
