--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
     "hamburger-react": "^2.5.1",
+    "kakao.maps.d.ts": "^0.1.40",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
