--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "framer-motion": "^11.15.0",
+    "lucide-react": "^0.469.0",
     "next": "^14.2.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
