--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lucide-react": "^0.469.0",
     "next": "^14.2.18",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
     "@types/node": "^20",
