--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@tanstack/react-query": "^5.63.0",
     "axios": "^1.7.9",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "next": "^14.2.18",
@@ -24,6 +25,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
