--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "next": "^14.2.18",
+    "next-auth": "^4.24.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
