--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "GENERATE_SOURCEMAP=false next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,9 +16,10 @@
     "@tanstack/react-query": "^5.63.0",
     "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
+    "firebase": "^11.6.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
-    "next": "^14.2.18",
+    "next": "^14.2.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
