--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && npm run sentry:sourcemaps",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org joytas --project javascript-nextjs ./.next && sentry-cli sourcemaps upload --org joytas --project javascript-nextjs ./.next"
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "@sentry/cli": "^2.46.0",
     "@sentry/nextjs": "^9.27.0",
     "@tanstack/react-query": "^5.63.0",
     "axios": "^1.7.9",
